--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("background.jpg");
+  background-image: url("bluevortex.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   image-rendering: -webkit-optimize-contrast;
