--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
   height: auto;
   top: 0;
   left: 0;
+  background-image: url(https://raw.githubusercontent.com/fangdarro/leocarrizaleshtmlresumev4/master/background.jpg);
 }
 
 .card {
